DifferentPlacesGravity height overflow problem solved

--- a/MISCELLANEOUS/DifferentPlacesGravity/styles.css
+++ b/MISCELLANEOUS/DifferentPlacesGravity/styles.css
@@ -5,7 +5,7 @@
 }
 body {
     width: 100%;
-    height: 100vh;
+    height: 100%;
     margin: 0;
     display: flex;
     justify-content: center;
@@ -14,12 +14,13 @@ body {
 }
 
 .container {
-    position: relative;
+    position: absolute;
+    top: 5%;
     display: flex;
     justify-content: center;
     width: 500px;
-    height: 90vh;
-    border: 5px solid #afafaf;
+    height: 90%;
+    border: 5px solid #121826;
     z-index: -1;
 }
 
@@ -28,6 +29,7 @@ body {
     width: 25px;
     height: 25px;
     background: #0f12ad;
+    border: 1px solid black;
     border-radius: 50%;
 }
 
@@ -39,7 +41,7 @@ body {
     height: 4rem;
     flex-wrap: wrap;
     justify-content:space-between;
-    top: 45vh;
+    top: 40%;
     right: 8rem;
     z-index: 1;
 }
